--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>{{#linkTo "user" currentUserId}}Profile{{/linkTo}}</li>
+        <li>{{#linkTo "user" currentUser}}Profile{{/linkTo}}</li>
         <li>{{#linkTo "users"}}Users{{/linkTo}}</li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
