--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -7,7 +7,7 @@
   <div class="col-md-3">
     <ul class="nav nav-pills nav-stacked">
     {{#each controller}}
-      <li>{{#linkTo "activity" this}}{{reps}}{{/linkTo}}</li>
+      <li>{{#linkTo "activity" this}}{{exercise.name}}{{/linkTo}}</li>
     {{else}}
       <li>There are no activities.</li>
     {{/each}}
