fix settings link

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -31,7 +31,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
-        <li>{{#linkTo "user.edit" currentUserId}}Settings{{/linkTo}}</li>
+        <li>{{#linkTo "user.edit" currentUser}}Settings{{/linkTo}}</li>
         <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
       </ul>
     </div><!--/.nav-collapse -->
