--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -4,16 +4,16 @@
 {{/if}}
 <hr>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-sm-2">
     <ul class="nav nav-pills nav-stacked">
     {{#each controller}}
-      <li>{{#linkTo "activity" this}}{{exercise.name}}{{/linkTo}}</li>
+      <li>{{#linkTo "activity" this}}{{date createdAt}} - {{exercise.name}}{{/linkTo}}</li>
     {{else}}
       <li>There are no activities.</li>
     {{/each}}
     </ul>
   </div>
-  <div class="col-md-9">
+  <div class="col-sm-10">
     {{outlet}}
   </div>
 </div>
