--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -1,45 +1,67 @@
 <h4>Activity Settings</h4>
 <hr>
-{{render "exercises"}}
-<div class="row activity-edit">
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Reps</label>
-    <div class="col-sm-9">
-      {{input value=reps classNames="form-control"}}
-    </div>
-  </div>
-  <br />
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Distance</label>
-    <div class="col-sm-9">
-      {{input value=distance classNames="form-control"}}
-    </div>
+<div class="row">
+  <div class="col-sm-2">
+    {{render "exercises"}}
   </div>
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Duration</label>
-    <div class="col-sm-9">
-      {{input value=duration classNames="form-control"}}
-    </div>
-  </div>
+  <div class="col-sm-10">
+    <h3 class="text-center">{{exercise.name}}</h3>
+    <div class="row activity-edit">
+      {{#if useReps}}
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Reps</label>
+        <div class="col-sm-9">
+          {{input value=reps classNames="form-control"}}
+        </div>
+      </div>
+      {{/if}}
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Calories</label>
-    <div class="col-sm-9">
-      {{input value=calories classNames="form-control"}}
-    </div>
-  </div>
+      {{#if useDistance}}
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Distance</label>
+        <div class="col-sm-9">
+          {{input value=distance classNames="form-control"}}
+        </div>
+      </div>
+      {{/if}}
 
-  <div class="form-group">
-    <label class= "col-sm-3 control-label">Weight</label>
-    <div class="col-sm-9">
-      {{input value=weight classNames="form-control"}}
-    </div>
-  </div>
+      {{#if useDuration}}
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Duration</label>
+        <div class="col-sm-9">
+          {{input value=duration classNames="form-control"}}
+        </div>
+      </div>
+      {{/if}}
 
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-9">
-      <input {{action "saveActivity"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+      {{#if useCalories}}
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Calories</label>
+        <div class="col-sm-9">
+          {{input value=calories classNames="form-control"}}
+        </div>
+      </div>
+      {{/if}}
+
+      {{#if useWeight}}
+      <div class="form-group">
+        <label class= "col-sm-3 control-label">Weight</label>
+        <div class="col-sm-9">
+          {{input value=weight classNames="form-control"}}
+        </div>
+      </div>
+      {{/if}}
+
+      {{#if canSave}}
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+          <input {{action "saveActivity"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
+        </div>
+      </div>
+      {{/if}}
     </div>
   </div>
 </div>
+
+
