--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-10">
+  <div class="col-md-6">
     <h4>Competition Settings</h4>
     <hr>
     <div class="row">
@@ -14,6 +14,8 @@
       </div>
     </div>
 
+    <br />
+
     <div class="row">
       <div class="form-group">
         <label class= "col-sm-4 control-label">Start Date</label>
@@ -22,6 +24,8 @@
         </div>
       </div>
     </div>
+
+    <br />
 
     <div class="row">
       <div class="form-group">
@@ -32,23 +36,29 @@
       </div>
     </div>
 
+    <br />
+
     <div class="row">
       <div class="form-group">
-        <label class= "col-sm-4 control-label">Lower Level Restriction</label>
+        <label class= "col-sm-4 control-label">Lower Level</label>
         <div class="col-sm-8">
           {{input value=lowerLevelRestriction classNames="form-control"}}
         </div>
       </div>
     </div>
 
+    <br />
+
     <div class="row">
       <div class="form-group">
-        <label class= "col-sm-4 control-label">Upper Level Restriction</label>
+        <label class= "col-sm-4 control-label">Upper Level</label>
         <div class="col-sm-8">
           {{input value=upperLevelRestriction classNames="form-control"}}
         </div>
       </div>
     </div>
+
+    <br />
 
     <div class="row">
       <div class="form-group">
@@ -59,27 +69,42 @@
       </div>
     </div>
 
+    <br />
+
     <div class="row">
       <div class="form-group">
-        <label class= "col-sm-4 control-label">Public</label>
+        <label class= "col-sm-4 control-label">Private</label>
         <div class="col-sm-8">
           {{input type="checkbox" value=isPublic}}
         </div>
       </div>
     </div>
 
+    <br />
+
     <div class="row">
       <div class="form-group">
         <div class="col-sm-offset-4 col-sm-8">
           <input {{action "saveCompetition"}} type="submit" class="btn btn-lg btn-block btn-success" value="Save" />
-        </div>
-        <div class="col-sm-offset-4 col-sm-8">
-          <input {{action "cancelSave"}} type="submit" class="btn btn-lg btn-block btn-info" value="Cancel" />
-        </div>        
+        </div>      
       </div>
     </div>
+  </div>
 
+  <div class="col-md-3">
+    <h4>Add Exercise</h4>
+    <ul class="nav">
+      {{render "exercises"}}
+    </ul>
+  </div>
+
+  <div class="col-md-3">
+    <h4>Remove Exercise</h4>
+    <ul class="nav">
+      {{#each "exercises"}}
+        <li>{{name}}</li>
+      {{/each}}
+    </ul>
   </div>
 </div>
-
-{{render "exercises"}}
+<hr>
