--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -102,7 +102,7 @@
     <h4>Remove Exercise</h4>
     <ul class="nav">
       {{#each "exercises"}}
-        <li>{{name}}</li>
+        <li><a href="#" {{action removeExercise this}}>{{name}}</a></li>
       {{/each}}
     </ul>
   </div>
