--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -1,5 +1,4 @@
-<ul class="nav nav-pills">
-  <li>{{#linkTo "user.stats"}}Stats{{/linkTo}}</li>
+<ul class="nav nav-tabs">
   <li>{{#linkTo "activities"}}Activities{{/linkTo}}</li>
   <li>{{#linkTo "user.competitions"}}Competitions{{/linkTo}}</li>
   <li>{{#linkTo "user.teamCompetitions"}}Team Competitions{{/linkTo}}</li>
