--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -1,11 +1,14 @@
 <h4>Activity Settings</h4>
 <hr>
 <div class="row">
-  <div class="col-sm-2">
-    {{render "exercises"}}
+  <div class="col-sm-4">
+    <h4>Choose an exercise</h4>
+    <ul class="nav">
+      {{render "exercises"}}
+    </ul>
   </div>
 
-  <div class="col-sm-10">
+  <div class="col-sm-6">
     <h3 class="text-center">{{exercise.name}}</h3>
     <div class="row activity-edit">
       {{#if useReps}}
