--- a/app/assets/javascripts/templates/user/competitions.hbs
+++ b/app/assets/javascripts/templates/user/competitions.hbs
@@ -1,5 +1,5 @@
 <h3>Competitions</h3>
-<ul>
+<ul class="nav">
   {{#each comp in controller}}
     <li><a href="#" {{action goToCompetition comp}}>{{comp.name}}</a></li>
   {{/each}}
