--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,13 +1,13 @@
 <div class="row">
-  <div class="col-md-2">
+  <div class="col-md-3">
     <h1>Users</h1>
-    <ul class="nav nav-pills nav-stacked">
+    <ul class="nav nav-pills">
     {{#each controller}}
       <li>{{#linkTo "user" this}}{{email}}{{/linkTo}}</li>
     {{/each}}
     </ul>
   </div>
-  <div class="col-md-10">
+  <div class="col-md-9">
     {{outlet}}
   </div>
 </div>
