adds highchart.js

--- a/app/assets/javascripts/templates/user/index.hbs
+++ b/app/assets/javascripts/templates/user/index.hbs
@@ -1,9 +1,10 @@
 <h3>Stats</h3>
 <div class="row">
   <div class="col-md-10">
-    todo
+    <div id="chartContainer"></div>
   </div>
   <div class="col-md-2">
+    {{controller}}
     <p>Name: {{name}}</p>
     <p>Nickname: {{nickname}}</p>
     <p>Age: {{age}}</p>
@@ -11,3 +12,4 @@
     <p>Weight: {{weight}}</p>
   </div>
 </div>
+{{controller.content}}
