fixes user activities page.

--- a/app/assets/javascripts/templates/user/index.hbs
+++ b/app/assets/javascripts/templates/user/index.hbs
@@ -7,9 +7,9 @@
     {{controller}}
     <p>Name: {{name}}</p>
     <p>Nickname: {{nickname}}</p>
+    <p>email: {{Email}}</p>
     <p>Age: {{age}}</p>
     <p>Height: {{height}}</p>
     <p>Weight: {{weight}}</p>
   </div>
 </div>
-{{controller.content}}
