--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -1,19 +1,25 @@
-<h1>Activities</h1>
-{{#if isCurrentUser}}
-  {{#linkTo "activities.create" class="btn btn-lg btn-success btn-block"}}New Activity{{/linkTo}}
-{{/if}}
+<h3>Activities</h3>
+<p>Log your activities to <strong>win your competitions and challenges</strong>. You don't want to be the weakest link!</p>
+<p class="text-warning">Don't overdue it! We all need to rest once in a while</p>
 <hr>
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-md-4">
+    {{#if isCurrentUser}}
+      {{#linkTo "activity" this class="btn btn-lg btn-success btn-block"}}New Activity{{/linkTo}}
+    {{/if}}
+    <h4>Recent Activity</h4>
     <ul class="nav">
-    {{#each controller}}
-      <li>{{#linkTo "activity" this}}{{date createdAt}} - {{exercise.name}}{{/linkTo}}</li>
-    {{else}}
-      <li>There are no activities.</li>
-    {{/each}}
+      {{#each controller}}
+        <li>{{#linkTo "activity" this}}{{date createdAt}} - {{exercise.name}}{{/linkTo}}</li>
+      {{else}}
+        <li>You haven't logged any activites recently.</li>
+      {{/each}}
     </ul>
   </div>
-  <div class="col-sm-8">
+
+  <div class="col-md-8">
     {{outlet}}
   </div>
 </div>
+
+
