--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-4">
     {{#if isCurrentUser}}
-      {{#linkTo "activity" this class="btn btn-lg btn-success btn-block"}}New Activity{{/linkTo}}
+      {{#linkTo "activities.create" class="btn btn-lg btn-success btn-block"}}New Activity{{/linkTo}}
     {{/if}}
     <h4>Recent Activity</h4>
     <ul class="nav">
