--- a/app/assets/javascripts/templates/user/competition.hbs
+++ b/app/assets/javascripts/templates/user/competition.hbs
@@ -7,11 +7,11 @@
       {{#each user in users}}
         <li>{{user.email}}
           <ul>
-            {{#each user.eventActivities}}
+            {{#each user.competitionActivities}}
               <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
             {{/each}}
             <hr>
-            <li>{{total user.eventActivities}}</li>
+            <li>{{total user.competitionActivities}} </li>
           </ul>
         </li>
       {{/each}}
