--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -14,13 +14,7 @@
       <ul class="nav navbar-nav">
         <li>{{#linkTo "user" currentUser}}Profile{{/linkTo}}</li>
         <li>{{#linkTo "users"}}Users{{/linkTo}}</li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Competitions <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li>{{#linkTo "competitions"}}Individual{{/linkTo}}</li>
-            <li>{{#linkTo "teamCompetitions"}}Team{{/linkTo}}</li>              
-          </ul>
-        </li>
+        <li>{{#linkTo "competitions"}}Competitions{{/linkTo}}</li>             
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Challenges <b class="caret"></b></a>
           <ul class="dropdown-menu">
