--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -49,3 +49,33 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-md-6">
+    <h3>{{name}} Ranking</h3>
+    <hr>
+    <ol>
+      {{#each user in users}}
+        <li>{{user.email}}
+          <ul>
+            {{#each user.competitionActivities}}
+              <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
+            {{/each}}
+            <hr>
+            <li>{{user.competitionActivities}} </li>
+          </ul>
+        </li>
+      {{/each}}
+    </ol>
+  </div>
+
+  <div class="col-md-6">
+    <h3>Exercises for the competition</h3>
+    <hr>
+    <ul>
+      {{#each exercises}}
+        <li>{{name}}</li>
+      {{/each}}
+    </ul>
+  </div>
+</div>
+
