--- a/app/assets/javascripts/templates/user/competitions.hbs
+++ b/app/assets/javascripts/templates/user/competitions.hbs
@@ -1,6 +1,6 @@
 <h3>Competitions</h3>
 <ul class="nav">
   {{#each comp in controller}}
-    <li>{{#linkTo "user.competition" comp}}{{comp.name}}{{/linkTo}}</li>
+    <li>{{#linkTo "competition" comp}}{{comp.name}}{{/linkTo}}</li>
   {{/each}}
 </ul>
