--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -60,22 +60,28 @@
             {{#each user.competitionActivities}}
               <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
             {{/each}}
-            <hr>
             <li>{{user.competitionActivities}} </li>
           </ul>
         </li>
       {{/each}}
     </ol>
   </div>
-
+    
   <div class="col-md-6">
-    <h3>Exercises for the competition</h3>
+    <h3>Scores</h3>
     <hr>
-    <ul>
-      {{#each exercises}}
-        <li>{{name}}</li>
+    <ol>
+      {{#each user in users}}
+        <li>{{user.email}}
+          <ul>
+            {{#each user.competitionActivities}}
+              <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
+            {{/each}}
+            <li>{{user.competitionActivities}} </li>
+          </ul>
+        </li>
       {{/each}}
-    </ul>
+    </ol>
   </div>
 </div>
 
