--- a/app/assets/javascripts/templates/exercises.hbs
+++ b/app/assets/javascripts/templates/exercises.hbs
@@ -1,5 +1,3 @@
-{{#each controller}}
-<li {{ action "addExercise" this}}><a href="#">{{name}}</a></li>
-{{/each}}
-
-
+{{#collection Ember.ListView contentBinding="controller" height=260 rowHeight=10}}
+    <li {{ action "addExercise" this}}><a href="#">{{name}}</a></li>
+{{/collection}}
