adds experience and level up

--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -11,6 +11,30 @@
   <p>Nickname: {{nickname}}</p>
 {{/if}}
 
+{{#if age}}
+  <p>Age: {{age}}</p>
+{{/if}}
+
+{{#if height}}
+  <p>Height: {{height}}</p>
+{{/if}}
+
+{{#if weight}}
+  <p>Weight: {{weight}}</p>
+{{/if}}
+
+{{#if level}}
+  <p>Level: {{level}}</p>
+{{/if}}
+
+{{#if experience}}
+  <p>Experience: {{experience}}</p>
+{{/if}}
+
+{{#if nextLevelExperience}}
+  <p>Experience to next level: {{nextLevelExperience}}</p>
+{{/if}}
+
 <hr>
 
 <ul class="nav nav-tabs">
