--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -50,38 +50,17 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6">
-    <h3>{{name}} Ranking</h3>
+  <h3>{{name}} Ranking</h3>
+  {{#each user in users}}
     <hr>
-    <ol>
-      {{#each user in users}}
-        <li>{{user.email}}
-          <ul>
-            {{#each user.competitionActivities}}
-              <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
-            {{/each}}
-            <li>{{user.competitionActivities}} </li>
-          </ul>
-        </li>
+    <h4>Rank: {{competitionRank controller.model user}}</h4>
+    <h5>User: {{user.email}}</h5>
+    <h5>Total Experience: {{competitionExperience controller.model user}}</h5>          
+    <ul>
+      {{#each user.competitionActivities}}
+        <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
       {{/each}}
-    </ol>
-  </div>
-    
-  <div class="col-md-6">
-    <h3>Scores</h3>
-    <hr>
-    <ol>
-      {{#each user in users}}
-        <li>{{user.email}}
-          <ul>
-            {{#each user.competitionActivities}}
-              <li>{{this.activity.exercise.name}} - {{this.activity.reps}} - {{date this.activity.createdAt}}</li>
-            {{/each}}
-            <li>{{user.competitionActivities}} </li>
-          </ul>
-        </li>
-      {{/each}}
-    </ol>
-  </div>
+    </ul>
+  {{/each}}
 </div>
 
