removes team models

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -14,7 +14,8 @@
       <ul class="nav navbar-nav">
         <li>{{#linkTo "user" currentUser}}Profile{{/linkTo}}</li>
         <li>{{#linkTo "users"}}Users{{/linkTo}}</li>
-        <li>{{#linkTo "competitions"}}Competitions{{/linkTo}}</li>                                
+        <li>{{#linkTo "competitions"}}Competitions{{/linkTo}}</li> 
+        <li>{{#linkTo "challenges"}}Challenges{{/linkTo}}</li>                                
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
