--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,4 +1,4 @@
-<h3>Competitions for Individuals</h3>
+<h3>Competitions</h3>
 <p>Competitions are the <strong>best way to get great results</strong>. They will motivate you harder than you have ever been motivated before.</p>
 <p class="text-warning">There can be only one winner!</p>
 <hr>
