--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -20,7 +20,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>{{#linkTo "contact"}}Contact us{{/linkTo}}</li>
         <li>{{#linkTo "user.edit" currentUser}}Settings{{/linkTo}}</li>
-        <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
+        <li><a href="/users/sign_out" data-method="delete" id='sign_out_button'>Sign out</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
