Added pre-build challenges

--- a/app/assets/javascripts/templates/challenge.hbs
+++ b/app/assets/javascripts/templates/challenge.hbs
@@ -11,6 +11,7 @@
 
 <h2>Name: {{name}}</h2>
 
+<p>Description: {{description}}</p>
 <p>Start Date: {{startDate}}</p>
 <p>End Date: {{endDate}}</p>
 <p>Max Participants: {{maxParticipants}}</p>
