--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-8">
     <h4>Competition Settings</h4>
     <hr>
     <div class="row">
@@ -7,9 +7,7 @@
         <label class= "col-sm-4 control-label">Name</label>
         <div class="col-sm-8">
           {{input value=name classNames="form-control"}}
-          {{#unless isValid}}
-            <p class="text-danger text-center">{{errors}}</p>
-          {{/unless}}
+          {{errors.name}}
         </div>
       </div>
     </div>
@@ -20,9 +18,7 @@
       <div class="form-group">
         <label class= "col-sm-4 control-label">Start Date</label>
         <div class="col-sm-8">
-          <hint>(mm-dd-yyyy)</hint>
-          {{input value=startDate classNames="form-control"}}
-          {{!-- {{view WorkoutWars.DatePicker value=startDate}} --}}
+          {{input type="date" value=startDate classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -33,9 +29,7 @@
       <div class="form-group">
         <label class= "col-sm-4 control-label">End Date</label>
         <div class="col-sm-8">
-          <hint>(mm-dd-yyyy)</hint>
-          {{input value=endDate classNames="form-control"}}
-          {{!-- {{view WorkoutWars.DatePicker valueBinding="content.endDate"}} --}}
+          {{input type="date" value=endDate classNames="form-control"}}
         </div>
       </div>
     </div>
@@ -47,6 +41,17 @@
         <label class= "col-sm-4 control-label">Max Participants</label>
         <div class="col-sm-8">
           {{input value=maxParticipants classNames="form-control"}}
+        </div>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="row">
+      <div class="form-group">
+        <label class= "col-sm-4 control-label">Exercise</label>
+        <div class="col-sm-8">
+          {{view Ember.Select value=selectedExercise content=selectExercises class="form-control" optionValuePath='content.id' optionLabelPath='content.name' prompt="Please select an exercise"}}
         </div>
       </div>
     </div>
@@ -71,22 +76,6 @@
         </div>      
       </div>
     </div>
-  </div>
-
-  <div class="col-md-3">
-    <h4>Add Exercise</h4>
-    <ul class="nav">
-      {{render "exercises"}}
-    </ul>
-  </div>
-
-  <div class="col-md-3">
-    <h4>Remove Exercise</h4>
-    <ul class="nav">
-      {{#each "competitionExercises"}}
-        <li><a href="#" {{action removeExercise this}}>{{exercise.name}}</a></li>
-      {{/each}}
-    </ul>
   </div>
 </div>
 <hr>
