--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -2,9 +2,11 @@
 <hr>
 
 {{#unless started}}
-  {{#unless isJoined}}
+  {{#if isJoined}}
+    <button class="btn btn-success"{{action "leave"}}>Leave this competition</button>
+  {{else}}
     <button class="btn btn-success"{{action "join"}}>Join this competition</button>
-  {{/unless}}
+  {{/if}}
 
   <div class="pull-right">          
     {{#linkTo "competition.edit" this class="btn btn-info"}}Edit{{/linkTo}}
@@ -29,11 +31,18 @@
   <div class="col-md-4">
     <h4>Exercises</h4>
     <ul>
-    {{#each controller.exercises}}
-      <li>{{name}}</li>
+    {{#each compExercise in controller.model.competitionExercises}}
+      <li>{{compExercise.exercise.name}} <button {{action "removeExercise" compExercise }} class="btn btn-xs btn-danger">&times;</button></li>
+    {{else}}
+      <h4>Add Exercise</h4>
+      <ul class="nav">
+        {{render "exercises"}}
+      </ul>
     {{/each}}
     </ul>
   </div>
+
+
 
   <div class="col-md-4">
     <h4>Users</h4>
@@ -51,7 +60,7 @@
   <h3>{{name}} Ranking</h3>
   {{#each controller.competitionJoins}}  
     <hr>
-    <h4>Rank: {{rank}}</h4>
+    {{#if rank}}<h4>Rank: {{rank}}</h4>{{/if}}
     <h5>User: {{this.user.email}}</h5>
     <h5>Total Experience: {{totalExperience}}</h5>          
   {{/each}}
