--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -7,7 +7,7 @@
       <div {{bindAttr class=":form-group errors.name:has-error:"}}>
         <label class= "col-sm-4 control-label">Name</label>
         <div class="col-sm-8">
-          {{input value=this.model.name classNames="form-control"}}
+          {{input value=this.model.name classNames="form-control" name="Name"}}
           {{#if errors.name}}<span class="help-block">{{errors.name}}</span>{{/if}}
         </div>
       </div>
@@ -19,7 +19,7 @@
       <div {{bindAttr class=":form-group errors.startDate:has-error:"}}>
         <label class= "col-sm-4 control-label">Start Date</label>
         <div class="col-sm-8">
-          {{view WorkoutWars.DateField valueBinding="controller.startDate" classNames="form-control"}}
+          {{view WorkoutWars.DateField valueBinding="controller.startDate" classNames="form-control" name="Start Date"}}
           {{#if errors.startDate}}<span class="help-block">{{errors.startDate}}</span>{{/if}}
         </div>
       </div>
@@ -31,7 +31,7 @@
       <div {{bindAttr class=":form-group errors.endDate:has-error:"}}>
         <label class= "col-sm-4 control-label">End Date</label>
         <div class="col-sm-8">
-          {{view WorkoutWars.DateField valueBinding="controller.endDate" classNames="form-control"}}
+          {{view WorkoutWars.DateField valueBinding="controller.endDate" classNames="form-control" name="End Date"}}
           {{#if errors.startDate}}<span class="help-block">{{errors.startDate}}</span>{{/if}}
         </div>
       </div>
@@ -43,7 +43,7 @@
       <div class="form-group">
         <label class= "col-sm-4 control-label">Max Participants</label>
         <div class="col-sm-8">
-          {{input value=this.model.maxParticipants classNames="form-control"}}
+          {{input value=this.model.maxParticipants classNames="form-control" name="Max Participants"}}
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="form-group">
         <div class="col-sm-offset-4 col-sm-8">
-          <button class="btn btn-primary">Create</button>
+          <button class="btn btn-success btn-lg">Save</button>
         </div>      
       </div>
     </div>
