--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,10 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require default
- *= require default.date
- *= require default.time
  *= require datepicker
+ *= require custom
  *= require_tree .
  */
 
