adds check to see if exercise is saving to guarantee only 1 can be added

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -42,7 +42,11 @@
       </ul>
     {{else}}
       <ul class="nav">
-        {{render "exercises"}}
+        {{#if isAddingExercise}}
+          <p>Saving...</p>
+        {{else}}
+          {{render "exercises"}}
+        {{/if}}
       </ul>
     {{/each}}
   </div>
