--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,7 +1,7 @@
 <h3>Competitions</h3>
-<p>Competitions are the <strong>best way to get great results</strong>. They will motivate you harder than you have ever been motivated before.</p>
+<p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
 <p class="text-warning">There can be only one winner!</p>
-<hr>
+<br />
 <div class="row">
   <div class="col-md-4">
     {{#linkTo "competitions.create" class="btn btn-lg btn-success btn-block"}}New Competition{{/linkTo}}
