--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -7,6 +7,7 @@
   {{else}}
     <button class="btn btn-success"{{action "join"}}>Join this competition</button>
   {{/if}}
+  
 
   {{#if hasPermission}}
     <div class="pull-right">          
@@ -70,8 +71,8 @@
     <h4>Users</h4>
     <ul class="nav">
     {{#if hasPermission}}
-      {{#each compJoin in controller.model.competitionJoins}}
-        <li>{{compJoin.user.email}}<button {{action "leave" compJoin }} class="btn btn-xs btn-danger pull-right">Remove</button></li>
+      {{#each compJoin in controller.competitionJoins}}
+        <li>{{compJoin.user.email}}<button {{action "removeUser" compJoin }} class="btn btn-xs btn-danger pull-right">Remove</button></li>
       {{else}}
         <li>None currently registered</li>
       {{/each}}
