--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   
   <% if user_signed_in? %>
     <meta name="current-user" content="<%= UserSerializer.new(current_user).to_json(root: false) %>" />
-  <% end %>
+  <%= yield %>
+  <% else %>
   <div class="container">  
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -38,6 +39,6 @@
     <%= render 'shared/flash' %>
     <%= yield %>
   </div>
-
+  <% end %>
 </body>
 </html>
