change color of leave button

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -2,7 +2,7 @@
 <hr>
 {{#unless started}}
   {{#if isJoined}}
-    <button class="btn btn-success"{{action "leave"}}>Leave this competition</button>
+    <button class="btn btn-info"{{action "leave"}}>Leave this competition</button>
   {{else}}
     <button class="btn btn-success"{{action "join"}}>Join this competition</button>
   {{/if}}
