--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,12 +1,14 @@
 <h2>{{name}}</h2>
 <hr>
 {{#unless started}}
+  
   {{#if isJoined}}
     <button class="btn btn-info"{{action "leave"}}>Leave this competition</button>
   {{else}}
-    <button class="btn btn-success"{{action "join"}}>Join this competition</button>
-  {{/if}}
-  
+    {{#if canJoin}}
+      <button class="btn btn-success"{{action "join"}}>Join this competition</button>
+    {{/if}}
+  {{/if}}  
 
   {{#if hasPermission}}
     <div class="pull-right">          
@@ -14,11 +16,10 @@
       <a href="#" class="btn btn-danger" name="Delete Competition" {{action delete this}}>Delete</a>
     </div>
   {{/if}}
+
 {{else}}
   {{#linkTo "activities" controllers.application.currentUser class="btn btn-success"}}Log Activity{{/linkTo}}
 {{/unless}}
-
-<hr>
 
 {{outlet}}
 
@@ -28,7 +29,7 @@
     <p>Creator: {{creator.email}}</p>
     <p>Start Date: {{date startDate}}</p>
     <p>End Date: {{date endDate}}</p>
-    <p>Max Participants: {{maxParticipants}}</p>
+    <p>Max Participants: {{numOfParticipants}}</p>
     <p>Currently registered: {{numberOfUsers}}</p>
     {{#if isPrivate}}
       <p>This is a private competition</p>
