--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <h1>Users</h1>
-    <ul class="nav nav-pills">
+    <ul class="nav">
     {{#each controller}}
       <li>{{#linkTo "user" this}}{{email}}{{/linkTo}}</li>
     {{/each}}
