--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -3,9 +3,7 @@
 <p class="text-warning">Don't overdue it! We all need to rest once in a while</p>
 <hr>
 {{#if isCurrentUser}}
-  {{controller}}
   {{#linkTo "activities.create" class="btn btn-success"}}New Activity{{/linkTo}}
-  <hr>
 {{/if}}
 
 {{outlet}}
@@ -13,10 +11,11 @@
 <hr>
 <h4>Recent Activity</h4>
 <ul class="nav">
-  {{#collection Ember.ListView contentBinding="controller" height=200 rowHeight=10}}
-      <li>{{#linkTo "activity" this}}{{date createdAt}} - {{this.exercise.name}}{{/linkTo}}</li>
+  {{#each controller}}
+    <li>{{#linkTo "activity" this}}{{date createdAt}} - {{this.exercise.name}}{{/linkTo}}</li>
   {{else}}
-  {{/collection}}
+    <li>No activities logged yet</li>
+  {{/each}}
 </ul>
 
 
