--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -1,64 +1,62 @@
-<form {{action 'create' this on='submit'}}>
-  <h4>Choose an exercise</h4>
-  <ul class="nav">
-    {{render "exercises"}}
-  </ul>
+<h4>Choose an exercise</h4>
+<ul class="nav">
+  {{render "exercises"}}
+</ul>
 
-  <h3 class="text-center">{{exercise.name}}</h3>
-  <div class="row activity-edit">
-    {{#if useReps}}
-    <div class="form-group">
-      <label class= "col-sm-3 control-label">Reps</label>
-      <div class="col-sm-9">
-        {{input value=reps classNames="form-control"}}
-      </div>
+<h3 class="text-center">{{exercise.name}}</h3>
+<div class="row activity-edit">
+  {{#if useReps}}
+  <div class="form-group">
+    <label class= "col-sm-3 control-label">Reps</label>
+    <div class="col-sm-9">
+      {{input value=reps classNames="form-control"}}
     </div>
-    {{/if}}
-
-    {{#if useDistance}}
-    <div class="form-group">
-      <label class= "col-sm-3 control-label">Distance</label>
-      <div class="col-sm-9">
-        {{input value=distance classNames="form-control"}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useDuration}}
-    <div class="form-group">
-      <label class= "col-sm-3 control-label">Duration</label>
-      <div class="col-sm-9">
-        {{input value=duration classNames="form-control"}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useCalories}}
-    <div class="form-group">
-      <label class= "col-sm-3 control-label">Calories</label>
-      <div class="col-sm-9">
-        {{input value=calories classNames="form-control"}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if useWeight}}
-    <div class="form-group">
-      <label class= "col-sm-3 control-label">Weight</label>
-      <div class="col-sm-9">
-        {{input value=weight classNames="form-control"}}
-      </div>
-    </div>
-    {{/if}}
-
-    {{#if canSave}}
-    <div class="form-group">
-      <div class="col-sm-offset-3 col-sm-9">
-        <button class="btn btn-success btn-lg">Save</button>
-      </div>
-    </div>
-    {{/if}}
   </div>
-</form>
+  {{/if}}
+
+  {{#if useDistance}}
+  <div class="form-group">
+    <label class= "col-sm-3 control-label">Distance</label>
+    <div class="col-sm-9">
+      {{input value=distance classNames="form-control"}}
+    </div>
+  </div>
+  {{/if}}
+
+  {{#if useDuration}}
+  <div class="form-group">
+    <label class= "col-sm-3 control-label">Duration</label>
+    <div class="col-sm-9">
+      {{input value=duration classNames="form-control"}}
+    </div>
+  </div>
+  {{/if}}
+
+  {{#if useCalories}}
+  <div class="form-group">
+    <label class= "col-sm-3 control-label">Calories</label>
+    <div class="col-sm-9">
+      {{input value=calories classNames="form-control"}}
+    </div>
+  </div>
+  {{/if}}
+
+  {{#if useWeight}}
+  <div class="form-group">
+    <label class= "col-sm-3 control-label">Weight</label>
+    <div class="col-sm-9">
+      {{input value=weight classNames="form-control"}}
+    </div>
+  </div>
+  {{/if}}
+
+  {{#if canSave}}
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-9">
+      <button {{action "saveActivity"}} class="btn btn-success btn-block">Save</button>
+    </div>
+  </div>
+  {{/if}}
+</div>
 
 
