--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -64,7 +64,7 @@
     <div class="row">
       <div class="form-group">
         <div class="col-sm-offset-4 col-sm-8">
-          <button class="btn btn-success btn-lg">Save</button>
+          <button class="btn btn-success btn-block">Save</button>
         </div>      
       </div>
     </div>
